--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,4 +15,8 @@
   </p>
 
   <button ion-button secondary menuToggle>Toggle Menu</button>
+  <button ion-button block clear (click)="logOut()">
+    logout
+  </button>
+
 </ion-content>
