--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,15 +8,32 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <h1 text-center>ApegoKids!</h1><br>
+  <h3 *ngIf="currentUser">Bem vindo {{ currentUser.email }}</h3>
+  
 
   <p>
-    If you get lost, test branch lukas lindo, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
+    If you get lost, test branch lukas lindo, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you
+    the way.
   </p>
 
   <button ion-button secondary menuToggle>Toggle Menu</button>
   <button ion-button block clear (click)="logOut()">
     logout
   </button>
+
+  <h3>Usuários</h3>
+  <ion-list>
+    <ion-item *ngFor="let user of users">
+      <h2>Nome: {{ user.name }}</h2>
+      <p>
+        Email: {{ user.email }}<br>
+        Uid: {{ user.uid }}<br>
+        DocId: {{user.id}}
+      </p>
+
+
+    </ion-item>
+  </ion-list>
 
 </ion-content>
