--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 
-<ion-content padding center text-center class="auth-page">
+<ion-content padding center text-center>
   <form [formGroup]="signinForm" (submit)="loginUser()" novalidate>
     <ion-item>
       <ion-label stacked>Email</ion-label>
