--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,16 +7,27 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
 
-  <p>
-    If you get lost, test branch lukas lindo, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+<ion-content  no-bounce>
+  <div class ="slide">
+  <ion-slides pager="true" dir="{{dir}}" (ionSlideWillChange)="onSlideChangeStart($event)"> <!--Startando o evento criado no, .TS-->
+    <ion-slide *ngFor="let slide of slides">
+      <img [src]="slide.image" class="slide-image" />
+      </ion-slide>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
-  <button ion-button block clear (click)="logOut()">
-    logout
-  </button>
+    <ion-slide> 
+      <img src="assets/img/padrinhos1.png" class="slide-image" />
+   </ion-slide>
+ </ion-slides>
+</div>
+</ion-content>
 
+
+
+<ion-content class="card1">
+
+  <ion-card>
+    <img src="assets/img/pad3.png"/>
+    
+  </ion-card>
 </ion-content>
