--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -27,11 +27,12 @@
 <ion-content class="card1">
 
   <ion-card>
-    <img src="assets/img/pad3.png"/>
+    <img src="assets/img/pad3.png"/> <!--IMG DEVE TER 600PX POR 100PX-->
     
   </ion-card>
 
-  
+</ion-content>
+
 <!-- <ion-content padding>
   <h1 text-center>ApegoKids!</h1><br>
   <h3 *ngIf="currentUser">Bem vindo {{ currentUser.email }}</h3>
@@ -54,8 +55,6 @@
         DocId: {{user.id}}
       </p> -->
 
-
+<!-- 
     </ion-item>
-  </ion-list>
-
-</ion-content>
+  </ion-list> -->
