--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>user-profile</ion-title>
+    <ion-title>Perfil {{userName}}</ion-title>
   </ion-navbar>
 
 </ion-header>
