--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,6 +1,6 @@
 <!-- -->
 <ion-content padding>
-  <div class="login-content">
+  <div class="signup-content">
 
     <!-- Logo -->
     <div padding text-center>
@@ -78,7 +78,7 @@
         <p>Confirme sua senha.</p>
       </ion-item>
 
-      <button ion-button block type="submit" [disabled]="!signupForm.valid">
+      <button ion-button block round color='light' type="submit" [disabled]="!signupForm.valid">
         Cadastrar
       </button>
 
@@ -114,9 +114,11 @@
     </div>
 
   </div>
-</ion-content>
-<ion-content class="image-background">
+ 
+  
 
-  <img src="assets/img/bg1.png">
+  </ion-content>
 
+  <ion-content class="image-background">
+  <img   src="assets/img/bg1.png">
 </ion-content>
