--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -29,7 +29,7 @@
       <p [innerHTML]="slide.description"></p>
     </ion-slide>
     <ion-slide>
-      <!-- Esse slide é separado pq ele é o ultimo???????????-->
+      <!-- Esse slide é o ultimo-->
       <img src="assets/img/slide4.png" class="slide-image" />
       <h2 class="slide-title">Pronto para começar?</h2>
       <button ion-button icon-end large clear (click)="startApp()">
