--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -1,7 +1,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Perfil {{userName}}</ion-title>
+      <button ion-button menuToggle color="light">
+          <ion-icon name="menu" color="light"></ion-icon>
+        </button>
+        <label ion-text class="text-primary" color="light">
+            {{userName}}
+          </label>
   </ion-navbar>
 
 </ion-header>
