--- a/src/pages/manage-product/manage-product.html
+++ b/src/pages/manage-product/manage-product.html
@@ -1,15 +1,17 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>
-      {{ title }}
-    </ion-title>
+          <label ion-text class="text-primary" color="light">
+            {{title}}
+          </label>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="produto">
+
+    <img src="assets/img/vestido1.jpg" class="img" />
   <form [formGroup]="form" (ngSubmit)="saveDocument(form.value)">
 
     <ion-item>
@@ -29,6 +31,9 @@
       <ion-input type="text" formControlName="price" [(ngModel)]="price"></ion-input>
     </ion-item>
 
+   
+        
+
 
     <ion-item>
       <button ion-button block color="primary" text-center padding-top padding-bottom [disabled]="!form.valid">
@@ -41,7 +46,9 @@
         </div>
       </button>
     </ion-item>
-
+   
   </form>
+
+
 
 </ion-content>
