--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -36,12 +36,15 @@
     </ion-slides>
   </div>
 
+ 
+ 
+
 
   <div class="card-background-page" padding>
     <ion-card>
       <img src="assets/img/pad1.png" (click)="goToProducts()" />
       <div class="card-title">MODA BOY</div>
-      <div class="card-subtitle">2018</div>
+      <div class="card-subtitle">2018</div> 
     </ion-card>
 
     <ion-card>
@@ -51,7 +54,7 @@
     </ion-card>
   </div>
 
-  <div padding class="card1">
+  <div  class="card1" padding>
 
     <ion-card>
       <img src="assets/img/anuncio2.jpg" (click)="goToProducts()">
@@ -61,14 +64,14 @@
 
 
 
-  <div class="card-produto1" padding>
+  <div class="card-produto1" padding text-center>
     <div>
       <h2 text-center class="h2">MELHORES OFERTAS</h2>
     </div>
 
 
 
-    <ion-card>
+    <ion-card >
       <img src="assets/img/vestido1.jpg" (click)="goToProducts()" />
       <div class="card-discricao"><b>Blusinha com saia de bolinhas</b></div>
       <div class="card-preco">R$50,00</div>
@@ -164,6 +167,26 @@
 
 </ion-content>
 
+<ion-content class="background">
+
+
+</ion-content>
+
+<ion-footer>
+  <ion-toolbar color="blue1" >
+    <ion-buttons>
+      <button ion-button  >
+        <ion-icon name="heart-outline" class="heart" style="zoom:2.0;" color="light"></ion-icon>
+      </button>
+      <button ion-button >
+        <ion-icon name="home" class="home 10x" style="zoom:2.0;" color="light"></ion-icon>
+      </button>
+      <button ion-button   >
+        <ion-icon name="ios-chatbubbles" class="profile 10x" style="zoom:2.0;" color="light"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
 
 
 
