--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -66,7 +66,7 @@
 
   <div class="card-produto1" padding text-center>
     <div>
-      <h2 text-center class="h2">MELHORES OFERTAS</h2>
+      <h1 text-center class="h2" >MELHORES OFERTAS</h1>
     </div>
 
 
@@ -173,16 +173,16 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar color="blue1" >
+  <ion-toolbar color="blue1" class="tool" >
     <ion-buttons>
       <button ion-button  >
-        <ion-icon name="heart-outline" class="heart" style="zoom:2.0;" color="light"></ion-icon>
+        <ion-icon name="heart-outline" class="heart" style="zoom:1.8;" color="light"></ion-icon>
       </button>
-      <button ion-button >
-        <ion-icon name="home" class="home 10x" style="zoom:2.0;" color="light"></ion-icon>
+      <button ion-button 11>
+        <ion-icon name="home" class="home 10x" style="zoom:1.8;" color="light" ></ion-icon>
       </button>
       <button ion-button   >
-        <ion-icon name="ios-chatbubbles" class="profile 10x" style="zoom:2.0;" color="light"></ion-icon>
+        <ion-icon name="ios-chatbubbles" class="profile 10x" style="zoom:1.8;" color="light"></ion-icon>
       </button>
     </ion-buttons>
   </ion-toolbar>
