--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -161,24 +161,17 @@
       <div class="card-preco">R$50,00</div>
     </ion-card>
 
-
-
   </div>
 
 </ion-content>
 
-<ion-content class="background">
-
-
-</ion-content>
-
 <ion-footer>
-  <ion-toolbar color="blue1" class="tool" >
+  <ion-toolbar color="blue1">
     <ion-buttons>
       <button ion-button  >
         <ion-icon name="heart-outline" class="heart" style="zoom:1.8;" color="light"></ion-icon>
       </button>
-      <button ion-button 11>
+      <button ion-button (click)="goToHome()">
         <ion-icon name="home" class="home 10x" style="zoom:1.8;" color="light" ></ion-icon>
       </button>
       <button ion-button   >
@@ -187,8 +180,6 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-footer>
-
-
 
 
 
