--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -1,5 +1,13 @@
-<!--TIREI A BARRA LA DE CIMA PARA MOSTRAR APENAS O BG-->
+
 <ion-content no-bounce class="slide">
+  <!--TIREI A BARRA LA DE CIMA PARA MOSTRAR APENAS O BG-->
+
+
+   
+    <div class="cloud"></div>
+    <div class="cloud small"></div>
+    
+
 
 <div>
     <ion-buttons end *ngIf="showSkip">
@@ -9,6 +17,8 @@
     <!--BUTTON SKIP-->
   </ion-buttons>
 </div>
+
+
 
 
 
@@ -35,5 +45,9 @@
       </button>
     </ion-slide>
   </ion-slides>
+</ion-content>
+
+<ion-content class="animatedBackground" >
+
 </ion-content>
 
