--- a/src/pages/user-products-list/user-products-list.html
+++ b/src/pages/user-products-list/user-products-list.html
@@ -27,24 +27,25 @@
   </button>
   <!---------------------------------------------------------------->
   <ion-list class="card-produto">
-      <ion-card >
-    <ion-item *ngFor="let product of myProducts; let i = index" (click)="setIndex(i)">
-        <img src="assets/img/vestido1.jpg" (click)="goToProducts()" />
+    <ion-card>
+      <ion-item *ngFor="let product of myProducts; let i = index" (click)="setIndex(i)">
+        <!-- <img *ngIf="!product.imgUrl" src="../../assets/img/Spinner-1s-200px.gif" /> -->
+        <img class='product-image' src="{{product.imgUrl}}" />
+        <!-- <img id="product-image" src="{{product.imgUrl}}"/> -->
         <div class="card-title">{{ product.name }}</div>
-        <div class="card-discricao">{{ product.description }}</div>
-        <div class="card-preco"> R$ {{ product.price }} </div>
+        <div class="card-discricao">{{ product.description | uppercase }}</div>
+        <div class="card-preco"> {{ product.price | currency : 'BRL' : 'symbol' : '0.2-2' }} </div>
 
-      <button ion-button color="secondary" (click)="updateDocument(product)">
-        Editar produto
-      </button>
-      <button ion-button color="danger" (click)="deleteDocument(product)">
-        Remover produto
-      </button>
+        <button ion-button color="secondary" (click)="updateDocument(product)">
+          Editar produto
+        </button>
+        <button ion-button color="danger" (click)="deleteDocument(product)">
+          Remover produto
+        </button>
 
 
-    </ion-item>
+      </ion-item>
     </ion-card>
 
   </ion-list>
 </ion-content>
-
