--- a/src/pages/manage-product/manage-product.html
+++ b/src/pages/manage-product/manage-product.html
@@ -23,12 +23,15 @@
     <img class="img" src="{{lastImageUrl}}" style="width: 100%; height: 50%" [hidden]="lastImage === null">
   </div>
 
-  <form [formGroup]="form" (ngSubmit)="saveDocument(form.value)">
+  <form [formGroup]="form" (ngSubmit)="saveDocument(form.value)" class="container">
 
-    <ion-item>
-      <ion-label stacked>Nome do Produto:</ion-label>
-      <ion-input type="text" formControlName="name" [(ngModel)]="name"></ion-input>
-    </ion-item>
+    <div class="form-group">
+      <ion-item>
+        <ion-label stacked>Nome do Produto:</ion-label>
+        <ion-input class="form-control" type="text" formControlName="name" [(ngModel)]="name" required></ion-input>
+      </ion-item>
+    </div>
+
 
 
     <ion-item>
@@ -69,7 +72,7 @@
 
     <ion-item>
       <button ion-button block color="primary" text-center padding-top padding-bottom [disabled]="!form.valid || !lastImageUrl">
-      <!-- <button ion-button block color="primary" text-center padding-top padding-bottom [disabled]="!form.valid"> -->
+        <!-- <button ion-button block color="primary" text-center padding-top padding-bottom [disabled]="!form.valid"> -->
         <div *ngIf="!isEditable">
           Adicionar produto
         </div>
