--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header class="kids">
   <ion-navbar no-border-bottom>
     <button ion-button menuToggle color="light">
       <ion-icon name="menu" color="light"></ion-icon>
@@ -42,6 +42,9 @@
 
 
   <div class="hot" text-center>
+    <div class="oferta">
+      <strong >OFERTAS POR TEMPO LIMITADO</strong>
+    </div>
   
     <ion-scroll scrollX="true">
 
