--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="user-avatar" >
-      <img src="../assets/img/Vestidos.jpg">
+      <img src="../../assets/img/Vestidos.jpg">
 
     </div>
   <div class="userName" text-center>
